# cpp_games

./: CMakeLists.txt
pong/: CMakeLists.txt
pong/src/: game.h  main.cpp
ship/: CMakeLists.txt
ship/src/: actor.cpp  actor.h  animsprite.cpp  animsprite.h  bgsprite.cpp  bgsprite.h  component.cpp  component.h  game.cpp  game.h  math.cpp  math.h  ship.cpp  ship.h  sprite.cpp  sprite.h
src/: game.cpp
